--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,4 +38,4 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: vendor/bin/phpuni
+        run: vendor/bin/phpunit
