--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
+APP_NAME=astral
+
+DB_DATABASE=astral
 DB_DRIVER=pdo_mysql
 DB_HOST=astral-db
-DB_PORT=3306
-DB_DATABASE=astral
-DB_USERNAME=pascalallen
 DB_PASSWORD=password
+DB_PORT=3306
+DB_USERNAME=pascalallen
+
 MYSQL_ROOT_PASSWORD=root
+
+PAPERTRAIL_PORT=
+PAPERTRAIL_URL=
