--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.0",
         "doctrine/cache": "^1.11",
         "doctrine/orm": "*",
+        "league/event": "^3.0",
         "league/tactician": "^1.1",
         "monolog/monolog": "^2.3",
         "psr/container": "^2.0",
