Update Doctrine packages versions
This commit include updates to several Doctrine packages version numbers. The versions of the Doctrine's composer packages are updated which includes cache, collections, common, dbal, deprecations, event-manager, inflector, lexer, orm and persistence. Notably, improvements and potential bug fixes are included.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
   astral-db:
     build:
       context: ./etc/db
+    platform: linux/amd64
     container_name: astral-db
     ports:
       - 3307:3306
